--- a/MVC5Course/packages.config
+++ b/MVC5Course/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
-  <package id="EntityFramework.zh-Hant" version="6.1.1" targetFramework="net45" />
+  <package id="elmah" version="1.2.2" targetFramework="net45" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
+  <package id="elmah.xml" version="1.2" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework.zh-Hant" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
@@ -12,10 +15,10 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework.zh-Hant" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin.zh-Hant" version="2.1.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc.zh-Hant" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor.zh-Hant" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc.zh-Hant" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor.zh-Hant" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.zh-Hant" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
@@ -25,8 +28,8 @@
   <package id="Microsoft.AspNet.WebApi.Core.zh-Hant" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hant" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages.zh-Hant" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.zh-Hant" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net45" />
@@ -49,5 +52,6 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="valueinjecter" version="3.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
