baseController增設一個專門處理 local 下其他controller 找不到action的問題

--- a/MVC5Course/MVC5Course.csproj
+++ b/MVC5Course/MVC5Course.csproj
@@ -380,6 +380,7 @@
     <Content Include="Views\Products\Edit.cshtml" />
     <Content Include="Views\Products\Index.cshtml" />
     <Content Include="Views\Products\NewProduct.cshtml" />
+    <Content Include="Views\Shared\Debug.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
