修改product Edit 的controller ，改為延遲驗證

--- a/MVC5Course/MVC5Course.csproj
+++ b/MVC5Course/MVC5Course.csproj
@@ -387,6 +387,8 @@
     <Content Include="Views\test\JsonData.cshtml" />
     <Content Include="Views\MB\Index.cshtml" />
     <Content Include="Views\MB\FormBinding.cshtml" />
+    <Content Include="Views\MB\MulitBinding.cshtml" />
+    <Content Include="Views\MB\Form2Binding.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
