--- a/MVC5Course/Web.config
+++ b/MVC5Course/Web.config
@@ -25,7 +25,7 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	</appSettings>
 	<system.web>
-
+		<customErrors mode="On"></customErrors>
 		<authentication mode="None" />
 		<compilation debug="true" targetFramework="4.5" />
 		<httpRuntime targetFramework="4.5" />
