--- a/MVC5Course/Web.config
+++ b/MVC5Course/Web.config
@@ -16,8 +16,8 @@
 	</configSections>
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MVC5Course-20150418020959.mdf;Initial Catalog=aspnet-MVC5Course-20150418020959;Integrated Security=True" providerName="System.Data.SqlClient" />
-		<add name="FabricsEntities" connectionString="metadata=res://*/Models.fabrics.csdl|res://*/Models.fabrics.ssdl|res://*/Models.fabrics.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Fabrics.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+	
+	<add name="FabricsEntities" connectionString="metadata=res://*/Models.Fabrics.csdl|res://*/Models.Fabrics.ssdl|res://*/Models.Fabrics.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Fabrics.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
@@ -36,7 +36,7 @@
 		</httpModules>
 	</system.web>
 	<system.webServer>
-		<modules  runAllManagedModulesForAllRequests="true">
+		<modules runAllManagedModulesForAllRequests="true">
 			<remove name="FormsAuthentication" />
 			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
 			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
